tests/org.eclipse.php.core.tests/workspace/errors/php7/invalidConstantExpression4.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo($a = $c) {}
?>
--EXPECT--
[line=2, start=24, end=26] Constant expression contains invalid operations